# Kaggle-House-Prices-Competition

./: README.md  pyproject.toml
notebook/: 0.0-sdv-report-data-exploration.ipynb  1.0-sdv-initial-data-exploration.ipynb
notebooks/: 0.0-sdv-report-data-exploration.ipynb
src/: data_exploration.ipynb  main.ipynb
